<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/product_price" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etProductCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/product_company" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="updateProduct"
            android:text="@string/update" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelUpdate"
            android:text="@string/cancel" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>
